Make sure tables do not overflow viewport

--- a/views/default/campaigns/stylesheet.css
+++ b/views/default/campaigns/stylesheet.css
@@ -116,6 +116,11 @@
     font-style: italic;
 }
 
+.campaigns-profile-layout table,
+.campaigns-table {
+    table-layout: fixed;
+}
+
 .campaigns-give-item-minimimum-donation {
     margin: 0 10px;
     font-weight: bold;
